// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Onboarding/FormSection Multiple Form Sections 1`] = `
<div>
  <div>
    <div>
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 Card__StyledCard-sc-92xey2-0 eLLuyo Spaceweb__Space-sc-1gh69p2-0 AleMW"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 iLSGsw Spaceweb__Space-sc-1gh69p2-0 hdmvwf"
          >
            <div
              class="Textweb__Text-dvo2dp-0 brRatD"
              color="shade.980"
              data-testid="ds-text"
            >
              PAN Details
            </div>
            <div
              class="Textweb__Text-dvo2dp-0 dIxukN"
              color="shade.950"
              data-testid="ds-text"
            >
              These details will be verified with the government database
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 FormSection__StyledView-sc-13y5es6-0 ftnjZA"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 iLSGsw Spaceweb__Space-sc-1gh69p2-0 cmpOZL"
            >
              <div
                class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
              >
                <div
                  class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
                >
                  <div
                    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 laciwS"
                  >
                    <div
                      class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
                    >
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
                      >
                        <div
                          class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
                        >
                          <label
                            class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                            color="shade.980"
                            data-testid="ds-text"
                            value=""
                            width="auto"
                          >
                            Business Owner's PAN
                          </label>
                        </div>
                        <div
                          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 hHYXCZ Flexweb__Flex-h5ddrw-0 bXkbdN"
                        >
                          <input
                            class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                            data-testid="ds-text-input"
                            name="promoter_pan"
                            placeholder="Enter text here"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
            >
              <div
                class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
              >
                <div
                  class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 laciwS"
                >
                  <div
                    class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
                  >
                    <div
                      class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
                    >
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
                      >
                        <label
                          class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                          color="shade.980"
                          data-testid="ds-text"
                          value=""
                          width="auto"
                        >
                          Business Owner's Name
                        </label>
                      </div>
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 hHYXCZ Flexweb__Flex-h5ddrw-0 bXkbdN"
                      >
                        <input
                          class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                          data-testid="ds-text-input"
                          name="promoter_pan_name"
                          placeholder="Enter text here"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
                    />
                  </div>
                  <div
                    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 kNGuEF"
                  >
                    <div
                      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 cndXnK Spaceweb__Space-sc-1gh69p2-0 cwrKW"
                    >
                      <div
                        class="Textweb__Text-dvo2dp-0 cqcyer"
                        color="shade.950"
                        data-testid="ds-text"
                      >
                        As mentioned in the PAN
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1i53gcl-0 Card__StyledCard-sc-92xey2-0 eLLuyo Spaceweb__Space-sc-1gh69p2-0 gmQKaB"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 iLSGsw Spaceweb__Space-sc-1gh69p2-0 hdmvwf"
          >
            <div
              class="Textweb__Text-dvo2dp-0 brRatD"
              color="shade.980"
              data-testid="ds-text"
            >
              Address Details
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 FormSection__StyledView-sc-13y5es6-0 ftnjZA"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 iLSGsw Spaceweb__Space-sc-1gh69p2-0 cmpOZL"
            >
              <div
                class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
              >
                <div
                  class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
                >
                  <div
                    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 laciwS"
                  >
                    <div
                      class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
                    >
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
                      >
                        <div
                          class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
                        >
                          <label
                            class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                            color="shade.980"
                            data-testid="ds-text"
                            value=""
                            width="auto"
                          >
                            Enter Address
                          </label>
                        </div>
                        <div
                          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 hHYXCZ Flexweb__Flex-h5ddrw-0 bXkbdN"
                        >
                          <textarea
                            class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                            data-testid="ds-text-area"
                            name="business_registered_address"
                            placeholder=""
                            rows="1"
                            style="height: 0px;"
                            type="text"
                          />
                        </div>
                      </div>
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 iLSGsw Spaceweb__Space-sc-1gh69p2-0 cmpOZL"
            >
              <div
                class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
              >
                <div
                  class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
                >
                  <div
                    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 laciwS"
                  >
                    <div
                      class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
                    >
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
                      >
                        <div
                          class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
                        >
                          <label
                            class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                            color="shade.980"
                            data-testid="ds-text"
                            value=""
                            width="auto"
                          >
                            Pincode
                          </label>
                        </div>
                        <div
                          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 hHYXCZ Flexweb__Flex-h5ddrw-0 bXkbdN"
                        >
                          <input
                            class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                            data-testid="ds-text-input"
                            name="business_registered_pin"
                            placeholder="Enter text here"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 iLSGsw Spaceweb__Space-sc-1gh69p2-0 cmpOZL"
            >
              <div
                class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
              >
                <div
                  class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
                >
                  <div
                    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 laciwS"
                  >
                    <div
                      class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
                    >
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
                      >
                        <div
                          class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
                        >
                          <label
                            class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                            color="shade.980"
                            data-testid="ds-text"
                            value=""
                            width="auto"
                          >
                            City
                          </label>
                        </div>
                        <div
                          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 hHYXCZ Flexweb__Flex-h5ddrw-0 bXkbdN"
                        >
                          <input
                            class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                            data-testid="ds-text-input"
                            name="business_registered_city"
                            placeholder="Enter text here"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
            >
              <div
                class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
              >
                <div
                  class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 laciwS"
                >
                  <div
                    class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
                  >
                    <div
                      class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
                    >
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
                      >
                        <label
                          class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                          color="shade.980"
                          data-testid="ds-text"
                          value=""
                          width="auto"
                        >
                          Select State
                        </label>
                      </div>
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 hHYXCZ Flexweb__Flex-h5ddrw-0 bXkbdN"
                      >
                        <input
                          class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                          data-testid="ds-text-input"
                          name="business_registered_state"
                          placeholder="Enter text here"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="layerHost"
    />
  </div>
  <div
    id="layerHost"
  />
</div>
`;

exports[`Storyshots Onboarding/FormSection Single Form Section 1`] = `
<div>
  <div>
    <div>
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 Card__StyledCard-sc-92xey2-0 eLLuyo Spaceweb__Space-sc-1gh69p2-0 gmQKaB"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 iLSGsw Spaceweb__Space-sc-1gh69p2-0 hdmvwf"
          >
            <div
              class="Textweb__Text-dvo2dp-0 brRatD"
              color="shade.980"
              data-testid="ds-text"
            >
              Contact Details
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 FormSection__StyledView-sc-13y5es6-0 ftnjZA"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 iLSGsw Spaceweb__Space-sc-1gh69p2-0 cmpOZL"
            >
              <div
                class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
              >
                <div
                  class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
                >
                  <div
                    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 laciwS"
                  >
                    <div
                      class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
                    >
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
                      >
                        <div
                          class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
                        >
                          <label
                            class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                            color="shade.980"
                            data-testid="ds-text"
                            value=""
                            width="auto"
                          >
                            Contact Name
                          </label>
                        </div>
                        <div
                          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 hHYXCZ Flexweb__Flex-h5ddrw-0 bXkbdN"
                        >
                          <input
                            class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                            data-testid="ds-text-input"
                            name="contact_name"
                            placeholder="Enter text here"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 iLSGsw Spaceweb__Space-sc-1gh69p2-0 cmpOZL"
            >
              <div
                class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
              >
                <div
                  class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
                >
                  <div
                    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 laciwS"
                  >
                    <div
                      class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
                    >
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
                      >
                        <div
                          class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
                        >
                          <label
                            class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                            color="shade.980"
                            data-testid="ds-text"
                            value=""
                            width="auto"
                          >
                            Contact Email
                          </label>
                        </div>
                        <div
                          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 hHYXCZ Flexweb__Flex-h5ddrw-0 bXkbdN"
                        >
                          <input
                            class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                            data-testid="ds-text-input"
                            name="contact_email"
                            placeholder="Enter text here"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
                      />
                    </div>
                    <div
                      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 kNGuEF"
                    >
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 cndXnK Spaceweb__Space-sc-1gh69p2-0 cwrKW"
                      >
                        <div
                          class="Textweb__Text-dvo2dp-0 cqcyer"
                          color="shade.950"
                          data-testid="ds-text"
                        >
                          We will reach out at this email id in case of any account related issue
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
            >
              <div
                class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
              >
                <div
                  class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 laciwS"
                >
                  <div
                    class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
                  >
                    <div
                      class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
                    >
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
                      >
                        <label
                          class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                          color="shade.980"
                          data-testid="ds-text"
                          value=""
                          width="auto"
                        >
                          Contact Number
                        </label>
                      </div>
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 hHYXCZ Flexweb__Flex-h5ddrw-0 bXkbdN"
                      >
                        <input
                          class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                          data-testid="ds-text-input"
                          name="contact_number"
                          placeholder="Enter text here"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="layerHost"
    />
  </div>
  <div
    id="layerHost"
  />
</div>
`;

exports[`Storyshots Onboarding/FormSection Single Form Section Error 1`] = `
<div>
  <div>
    <div>
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 Card__StyledCard-sc-92xey2-0 eLLuyo Spaceweb__Space-sc-1gh69p2-0 gmQKaB"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 iLSGsw Spaceweb__Space-sc-1gh69p2-0 hdmvwf"
          >
            <div
              class="Textweb__Text-dvo2dp-0 brRatD"
              color="shade.980"
              data-testid="ds-text"
            >
              Contact Details
            </div>
            <div
              class="Textweb__Text-dvo2dp-0 iDwqd"
              color="negative.900"
              data-testid="ds-text"
            >
              We were unable to verify contact number.
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 FormSection__StyledView-sc-13y5es6-0 ftnjZA"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 iLSGsw Spaceweb__Space-sc-1gh69p2-0 cmpOZL"
            >
              <div
                class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
              >
                <div
                  class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
                >
                  <div
                    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 laciwS"
                  >
                    <div
                      class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
                    >
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
                      >
                        <div
                          class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
                        >
                          <label
                            class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                            color="shade.980"
                            data-testid="ds-text"
                            value=""
                            width="auto"
                          >
                            Contact Name
                          </label>
                        </div>
                        <div
                          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 hHYXCZ Flexweb__Flex-h5ddrw-0 bXkbdN"
                        >
                          <input
                            class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                            data-testid="ds-text-input"
                            name="contact_name"
                            placeholder="Enter text here"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 iLSGsw Spaceweb__Space-sc-1gh69p2-0 cmpOZL"
            >
              <div
                class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
              >
                <div
                  class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
                >
                  <div
                    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 laciwS"
                  >
                    <div
                      class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
                    >
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
                      >
                        <div
                          class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
                        >
                          <label
                            class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                            color="shade.980"
                            data-testid="ds-text"
                            value=""
                            width="auto"
                          >
                            Contact Email
                          </label>
                        </div>
                        <div
                          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 hHYXCZ Flexweb__Flex-h5ddrw-0 bXkbdN"
                        >
                          <input
                            class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                            data-testid="ds-text-input"
                            name="contact_email"
                            placeholder="Enter text here"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
                      />
                    </div>
                    <div
                      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 kNGuEF"
                    >
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 cndXnK Spaceweb__Space-sc-1gh69p2-0 cwrKW"
                      >
                        <div
                          class="Textweb__Text-dvo2dp-0 cqcyer"
                          color="shade.950"
                          data-testid="ds-text"
                        >
                          We will reach out at this email id in case of any account related issue
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
            >
              <div
                class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
              >
                <div
                  class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 laciwS"
                >
                  <div
                    class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
                  >
                    <div
                      class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
                    >
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
                      >
                        <label
                          class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                          color="shade.980"
                          data-testid="ds-text"
                          value=""
                          width="auto"
                        >
                          Contact Number
                        </label>
                      </div>
                      <div
                        class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 hHYXCZ Flexweb__Flex-h5ddrw-0 bXkbdN"
                      >
                        <input
                          class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                          data-testid="ds-text-input"
                          name="contact_number"
                          placeholder="Enter text here"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="layerHost"
    />
  </div>
  <div
    id="layerHost"
  />
</div>
`;
